--- a/ColorBack/index.html
+++ b/ColorBack/index.html
@@ -632,6 +632,7 @@
                 <option value=#F62817>Fire Engine Red</option>
                 <option value=#E42217>Lava Red</option>
                 <option value=#E41B17>Love Red</option>
+                <option value="orange">Orange</option>
                 <option value=#DC381F>Grapefruit</option>
                 <option value=#C34A2C>Chestnut Red</option>
                 <option value=#C24641>Cherry Red</option>
