--- a/ColorBack/index.html
+++ b/ColorBack/index.html
@@ -750,7 +750,7 @@
 
     <p>
     </p>
-    <div> <canvas id="canvas" width="1400" height="600"></canvas></div>
+    <div> <canvas id="canvas" width="100%" height="90%"></canvas></div>
 
     <script>
 
