Attempt #2 At Fixing Width

--- a/ColorBack/index.html
+++ b/ColorBack/index.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <title>Move Your Mouse</title>
         <style>
+            .class{
+                display:block;
+                width:100%;
+            }
             div {
                 width: 100%;
                 background: black;
@@ -18,6 +22,10 @@
             }
             body{
                 background: black;   
+
+                margin:0px;
+                padding:0px;
+                width:100%;
             }
         </style>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
