--- a/ColorBack/index.html
+++ b/ColorBack/index.html
@@ -758,7 +758,7 @@
 
     <p>
     </p>
-    <div> <canvas id="canvas" width="100%" height="90%"></canvas></div>
+    <div> <canvas id="canvas" width="100%" min-height = "1000px" height="90%"></canvas></div>
 
     <script>
 
