--- a/ColorBack/index.html
+++ b/ColorBack/index.html
@@ -4,10 +4,6 @@
         <meta charset="utf-8">
         <title>Move Your Mouse</title>
         <style>
-            .class{
-                display:block;
-                width:100%;
-            }
             div {
                 width: 100%;
                 background: black;
@@ -26,6 +22,9 @@
                 margin:0px;
                 padding:0px;
                 width:100%;
+            }
+            #canvas{
+                min-height = 1000px;
             }
         </style>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -758,7 +757,7 @@
 
     <p>
     </p>
-    <div> <canvas id="canvas" width="100%" min-height = "1000px" height="90%"></canvas></div>
+    <div> <canvas id="canvas" width="100%"></canvas></div>
 
     <script>
 
