--- a/ColorBack/index.html
+++ b/ColorBack/index.html
@@ -18,10 +18,14 @@
             }
             body{
                 background: black;   
-                width:100%;
+                width:98%;
             }
             #canvas{
                 min-height = 1000px;
+                min-width = 900px;
+            }
+            canvas{
+                width = 90%
             }
         </style>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -754,7 +758,7 @@
 
     <p>
     </p>
-    <div> <canvas id="canvas" width="100%"></canvas></div>
+    <div> <canvas id="canvas"></canvas></div>
 
     <script>
 
