--- a/ColorBack/index.html
+++ b/ColorBack/index.html
@@ -20,13 +20,7 @@
                 background: black;   
                 width:98%;
             }
-            #canvas{
-                min-height = 1000px;
-                min-width = 900px;
-            }
-            canvas{
-                width = 90%
-            }
+           
         </style>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script type="text/javascript">
@@ -758,7 +752,7 @@
 
     <p>
     </p>
-    <div> <canvas id="canvas"></canvas></div>
+    <div> <canvas id="canvas" style = "height = 900px; width = 1200 px;"></canvas></div>
 
     <script>
 
