--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 
 <body>
   <script src="js/scripts.js"></script>
+    <div id = "top">
     <h3>Stephen Harlow Small Side Projects</h3>
-    <h4><a href = "https://github.com/stephen-harlow">Stephen's Github</a>
-        <p></p><a href = "https://srhdeveloper.com">SRHDeveloper.com</a></h4>
+    <div id="navcontainer">
+    <ul id="navlist">
+        <li><a href = "https://github.com/stephen-harlow">Stephen's Github</a></li>
+        <li><a href = "https://srhdeveloper.com">SRHDeveloper.com</a></li>
+        </ul>
+    </div>
+        </div>
     <div id = "Mouse" class = "Project">
         <h3><a href="http://stephen-harlow.github.io/ColorBack/index.html" target = "_blank" >ColorBack</a></h3>
         <h4><a href="https://github.com/stephen-harlow/stephen-harlow.github.io/tree/master/ColorBack" target = "_blank" >ColorBack Github</a></h4>
