--- a/ColorBack/index.html
+++ b/ColorBack/index.html
@@ -8,9 +8,8 @@
         <style>
             div {
                             
-                background: white;
+                background: bla;
                 border: 2px groove;
-                float: right;
             }
             p {
                 color: black;
@@ -20,9 +19,6 @@
             }
             body{
                 background: black;   
-            }
-            .canvas{
-                width: 100%;
             }
             
         </style>
@@ -754,7 +750,7 @@
 
     <p>
     </p>
-    <div> <canvas id="canvas"  height="500"></canvas></div>
+    <div> <canvas id="canvas"  height="500" width="600px"></canvas></div>
 
     <script>        
         $( "div" ).mousemove(function( event ) {
