--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>HTML Test Bed</title>
-  <meta name="description" content="Home Page for Stephen Harlow's Testbed">
-  <meta name="author" content="SRHDeveloper">
-  <link rel="stylesheet" href="/stylesheet.css">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML Test Bed</title>
+        <meta name="description" content="Home Page for Stephen Harlow's Testbed">
+        <meta name="author" content="SRHDeveloper">
+        <link rel="stylesheet" href="/stylesheet.css">
+    </head>
 
-<body>
-  <script src="js/scripts.js"></script>
-    <div id = "top">
-    <h3>Stephen Harlow Small Side Projects</h3>
-    <div id="navcontainer">
-    <ul id="navlist">
-        <li><a href = "https://github.com/stephen-harlow">Stephen's Github</a></li>
-        <li><a href = "https://srhdeveloper.com">SRHDeveloper.com</a></li>
-        </ul>
-    </div>
+    <body>
+        <script src="js/scripts.js"></script>
+        <div id = "top">
+            <h3>Stephen Harlow Small Side Projects</h3>
+            <div id="navcontainer">
+                <ul id="navlist">
+                    <li><a href = "https://github.com/stephen-harlow">Stephen's Github</a></li>
+                    <li><a href = "https://srhdeveloper.com">SRHDeveloper.com</a></li>
+                </ul>
+            </div>
         </div>
-    <div id = "Mouse" class = "Project">
-        <h3><a href="http://stephen-harlow.github.io/ColorBack/index.html" target = "_blank" >ColorBack</a></h3>
-        <h4><a href="https://github.com/stephen-harlow/stephen-harlow.github.io/tree/master/ColorBack" target = "_blank" >ColorBack Github</a></h4>
-        <h4>Started on Wednesday November 25, 2015</h4>
-        <p>This small side project was designed to test and expand my use of Jquery and HTML. to start, you simply have to move the mouse around. If you would like to move the mouse without drawing, press any key on the keyboard. You can select the background and circle color, along with the size of the circle. NOTE: This project does not work on mobile devices, due to the scrolling mechanism. </p>
-    </div>
-</body>
+        <div id = "Touch" class = "Project">
+            <h3><a href="http://stephen-harlow.github.io/Touch/index.html" target = "_blank" >Touch</a></h3>
+            <h4><a href="https://github.com/stephen-harlow/stephen-harlow.github.io/tree/master/Touch" target = "_blank" >Touch Github</a></h4>
+            <h4>Started on Friday December 4, 2015</h4>
+            <p>This is the second iteration of the drawing project. I took the main features of the ColorBack Project and changed the functionality to allow for touchscreen devices. </p>
+        </div><div id = "Mouse" class = "Project">
+            <h3><a href="http://stephen-harlow.github.io/ColorBack/index.html" target = "_blank" >ColorBack</a></h3>
+            <h4><a href="https://github.com/stephen-harlow/stephen-harlow.github.io/tree/master/ColorBack" target = "_blank" >ColorBack Github</a></h4>
+            <h4>Started on Wednesday November 25, 2015</h4>
+            <p>This small side project was designed to test and expand my use of Jquery and HTML. to start, you simply have to move the mouse around. If you would like to move the mouse without drawing, press any key on the keyboard. You can select the background and circle color, along with the size of the circle. NOTE: This project does not work on mobile devices, due to the scrolling mechanism. </p>
+        </div>
+    </body>
 </html>
