--- a/Touch/index.html
+++ b/Touch/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <title>HTML5 multi-touch</title>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
