Attempt to Fix Touch 2

--- a/Touch/index.html
+++ b/Touch/index.html
@@ -10,7 +10,7 @@
         <script>
             var cursorX;
             var cursorY;
-            
+
             $( document ).ready(function() {
                 updateTextColour("#000000");
             }); 
@@ -53,13 +53,17 @@
                     var ctx = $('#mycanvas')[0].getContext("2d");
                     ctx.beginPath();
                     var str = $('#Circle').val();
-                    if(str == "random"){         ctx.fillStyle='#'+Math.floor(Math.random()*16777215).toString(16);
+
+                    var pos   = e.touches[i].offset();
+                    var elPos = { X:pos.left , Y:pos.top };
+                    var mPos  = { X:e.clientX-elPos.X, Y:e.clientY-elPos.Y };
+                    if(str == "random"){         ctx.fillStyle='#'+Math.floor(Math.random()*16777215).toString(16);                   
                                        }
                     else{
                         ctx.fillStyle = str;   
                     }
                     if($("#DRAW").html() == "YES"){
-                        ctx.arc(e.touches[i].pageX, e.touches[i].pageY, $('#Size').val(), 0, Math.PI*2, true); 
+                        ctx.arc(mPos.x, mPos.Y, $('#Size').val(), 0, Math.PI*2, true); 
                         ctx.closePath();
                         ctx.fill();  
                     }
@@ -792,13 +796,16 @@
                 var ctx = $('#mycanvas')[0].getContext("2d");
                 ctx.beginPath();
                 var str = $('#Circle').val();
+                var pos   = $(this).offset();
+                var elPos = { X:pos.left , Y:pos.top };
+                var mPos  = { X:e.clientX-elPos.X, Y:e.clientY-elPos.Y };
                 if(str == "random"){         ctx.fillStyle='#'+Math.floor(Math.random()*16777215).toString(16);
                                    }
                 else{
                     ctx.fillStyle = str;   
                 }
                 if($("#DRAW").html() == "YES"){
-                    ctx.arc(e.pageX-15, e.pageY-20, $('#Size').val(), 0, Math.PI*2, true); 
+                    ctx.arc(mPos.X-10, mPos.Y, $('#Size').val(), 0, Math.PI*2, true); 
                     ctx.closePath();
                     ctx.fill();  
                 }
