--- a/extend.html
+++ b/extend.html
@@ -1,49 +1,159 @@
-<html>
-<head>
+<html><head>
   <title>HackDFW Caeser Cipher Tool</title>
 </head>
 <body>
-  <p id="result" placeholder="email">
-
-  <input id="key" placeholder="key">
+  <input id="key" placeholder="cipher">
   <input id="email" placeholder="email">
-  <button id="dabutton">click me</button>
+  <button id="dabutton">brute caesar solver</button>
+  <input id="vignere" placeholder="vignere cipher">
+<button id="vbutton">solve vignere</button>
 
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script>
 var caesarShift = function(str, amount) {
+
 	// Wrap the amount
 	if (amount < 0)
 		return caesarShift(str, amount + 26);
+
 	// Make an output variable
 	var output = '';
+
 	// Go through each character
 	for (var i = 0; i < str.length; i ++) {
+
 		// Get the character we'll be appending
 		var c = str[i];
+
 		// If it's a letter...
 		if (c.match(/[a-z]/i)) {
+
 			// Get its code
 			var code = str.charCodeAt(i);
+
 			// Uppercase letters
 			if ((code >= 65) && (code <= 90))
 				c = String.fromCharCode(((code - 65 + amount) % 26) + 65);
+
 			// Lowercase letters
 			else if ((code >= 97) && (code <= 122))
 				c = String.fromCharCode(((code - 97 + amount) % 26) + 97);
+
 		}
+
 		// Append
 		output += c;
+
 	}
+
 	// All done!
 	return output;
+
 };
+
   $("#dabutton").click(function(){
     for(var i=0;i<=26;i++){
-      $.post(("https://hdfw-tehgame.herokuapp.com/puzzle/caesar/"+$("#email").val()), {"answer":(caesarShift($("#key").val(), i))}, function(data,status,xhr){$( ".result" ).html( data );}, "json");
+      $.post(("https://hdfw-tehgame.herokuapp.com/puzzle/caesar/"+$("#email").val()), {"answer":(caesarShift($("#key").val(), i))}, function(data,status,xhr){}, "json");
     }
   });
+
+
+  var VigenereCipher = {
+
+  _tabulaRecta: {
+    a: "abcdefghijklmnopqrstuvwxyz",
+    b: "bcdefghijklmnopqrstuvwxyza",
+    c: "cdefghijklmnopqrstuvwxyzab",
+    d: "defghijklmnopqrstuvwxyzabc",
+    e: "efghijklmnopqrstuvwxyzabcd",
+    f: "fghijklmnopqrstuvwxyzabcde",
+    g: "ghijklmnopqrstuvwxyzabcdef",
+    h: "hijklmnopqrstuvwxyzabcdefg",
+    i: "ijklmnopqrstuvwxyzabcdefgh",
+    j: "jklmnopqrstuvwxyzabcdefghi",
+    k: "klmnopqrstuvwxyzabcdefghij",
+    l: "lmnopqrstuvwxyzabcdefghijk",
+    m: "mnopqrstuvwxyzabcdefghijkl",
+    n: "nopqrstuvwxyzabcdefghijklm",
+    o: "opqrstuvwxyzabcdefghijklmn",
+    p: "pqrstuvwxyzabcdefghijklmno",
+    q: "qrstuvwxyzabcdefghijklmnop",
+    r: "rstuvwxyzabcdefghijklmnopq",
+    s: "stuvwxyzabcdefghijklmnopqr",
+    t: "tuvwxyzabcdefghijklmnopqrs",
+    u: "uvwxyzabcdefghijklmnopqrst",
+    v: "vwxyzabcdefghijklmnopqrstu",
+    w: "wxyzabcdefghijklmnopqrstuv",
+    x: "xyzabcdefghijklmnopqrstuvw",
+    y: "yzabcdefghijklmnopqrstuvwx",
+    z: "zabcdefghijklmnopqrstuvwxy"
+  },
+
+  encrypt: function(plainText, keyword){
+    if( typeof(plainText) !== "string" ){
+      return "invalid plainText. Must be string, not " + typeof(plainText);
+    }
+    if( typeof(keyword) !== "string" ){
+      return "invalid keyword. Must be string, not " + typeof(keyword);
+    }
+
+    plainText = plainText.toLowerCase();
+    keyword = keyword.match(/[a-z]/gi).join("").toLowerCase();
+    var encryptedText = "";
+    var specialCharacterCount = 0;
+
+    for( var i = 0; i < plainText.length; i++ ){
+      var keyLetter = (i - specialCharacterCount) % keyword.length;
+      var keywordIndex = VigenereCipher._tabulaRecta.a.indexOf(keyword[keyLetter]);
+
+      if( VigenereCipher._tabulaRecta[plainText[i]] ){
+        encryptedText += VigenereCipher._tabulaRecta[plainText[i]][keywordIndex];
+      }else{
+        encryptedText += plainText[i];
+        specialCharacterCount++;
+      }
+    }
+
+    return encryptedText;
+  },
+
+  decrypt: function(encryptedText, keyword){
+    if( typeof(encryptedText) !== "string" ){
+      return "invalid encryptedText. Must be string, not " + typeof(encryptedText);
+    }
+    if( typeof(keyword) !== "string" ){
+      return "invalid keyword. Must be string, not " + typeof(keyword);
+    }
+
+    encryptedText = encryptedText.toLowerCase();
+    keyword = keyword.match(/[a-z]/gi).join("").toLowerCase();
+    var decryptedText = "";
+    var specialCharacterCount = 0;
+
+    for( var i = 0; i < encryptedText.length; i++ ){
+      var keyLetter = (i - specialCharacterCount) % keyword.length;
+      var keyRow = VigenereCipher._tabulaRecta[keyword[keyLetter]];
+
+      if( keyRow.indexOf(encryptedText[i]) !== -1 ){
+        decryptedText += VigenereCipher._tabulaRecta.a[keyRow.indexOf(encryptedText[i])];
+      }else{
+        decryptedText += encryptedText[i];
+        specialCharacterCount++;
+      }
+    }
+
+    return decryptedText;
+  }
+
+};
+
+$("#vbutton").click(function(){
+
+  $("body").html(VigenereCipher.decrypt($("#vignere").val(), "hackdfw"));
+});
+
 </script>
-</body>
-</html>
+
+
+</body></html>
