--- a/extend.html
+++ b/extend.html
@@ -54,7 +54,7 @@ var caesarShift = function(str, amount) {
 
   $("#dabutton").click(function(){
     for(var i=0;i<=26;i++){
-      $.post(("https://hdfw-tehgame.herokuapp.com/puzzle/caesar/"+$("#email").val()), {"answer":(caesarShift($("#key").val(), i))}, function(data,status,xhr){}, "json");
+      $.post(("https://hdfw-tehgame.herokuapp.com/puzzle/caesar/"+$("#email").val()), {"answer":(caesarShift($("#key").val(), i))}, function(data,status,xhr){$("body").append(data + " " + (caesarShift($("#key").val(), i)))}, "json");
     }
   });
 
@@ -150,7 +150,7 @@ var caesarShift = function(str, amount) {
 
 $("#vbutton").click(function(){
 
-  $("body").html(VigenereCipher.decrypt($("#vignere").val(), "hackdfw"));
+  $("body").append(VigenereCipher.decrypt($("#vignere").val(), "hackdfw"));
 });
 
 </script>
